--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,11 @@ code {
   align-items: center;
 }
 .flex-center{
-  display: "flex";
+  display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.static {
+  z-index: 9999999999;
 }
